k8s/overlays/prod/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: heyb-web
spec:
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8000"
        prometheus.io/path: "/metrics"
    spec:
      imagePullSecrets:
      - name: ghcr-secret
      containers:
      - name: web
        resources:
          limits:
            cpu: 1000m
            memory: 1Gi
          requests:
            cpu: 500m
            memory: 512Mi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: heyb-celery
spec:
  template:
    spec:
      imagePullSecrets:
      - name: ghcr-secret
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: heyb-celery-beat
spec:
  template:
    spec:
      imagePullSecrets:
      - name: ghcr-secret
