k8s/overlays/prod/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: heyb-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
spec:
  rules:
  - host: heyb-backend-prod.dongpark.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: heyb-web
            port:
              number: 80
  tls:
  - hosts:
    - heyb-backend-prod.dongpark.dev
    secretName: heyb-tls-secret
